deployment/smidle-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smidle
  labels:
    app: smidle
spec:
  replicas: 3
  selector:
    matchLabels:
      app: smidle
  template:
    metadata:
      labels:
        app: smidle
    spec:
      imagePullSecrets:
        - name: docker-registries
      volumes:
        - name: config
          configMap:
            name: backendconfig
      containers:
        - name: smidle-rest-api
          image: docker.pkg.github.com/smartsquaregmbh/smidle/smidle-rest-api
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/ca-certificate-postgresql.crt
              subPath: ca-certificate-postgresql.crt
            - name: config
              mountPath: /etc/rest-api.properties
              subPath: rest-api.properties
