deployment/smidle-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smidle-frontend
  labels:
    app: smidle-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smidle-frontend
  template:
    metadata:
      labels:
        app: smidle-frontend
    spec:
      imagePullSecrets:
        - name: docker-registries
      containers:
        - name: smidle-frontend
          image: docker.pkg.github.com/smartsquaregmbh/smidle/smidle-frontend
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
            - name: https
              containerPort: 443  # TODO need?
---
apiVersion: v1
kind: Service
metadata:
  name: smidle-frontend-service
spec:
  selector:
    app: smidle-frontend
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3000
    - protocol: TCP
      name: https
      port: 443
      targetPort: 443
