deployment/smidle-restapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smidle-restapi
  labels:
    app: smidle-restapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: smidle-restapi
  template:
    metadata:
      labels:
        app: smidle-restapi
    spec:
      imagePullSecrets:
        - name: docker-registries
      volumes:
        - name: config
          configMap:
            name: backendconfig
      containers:
        - name: smidle-rest-api
          image: docker.pkg.github.com/smartsquaregmbh/smidle/smidle-rest-api
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/ca-certificate-postgresql.crt
              subPath: ca-certificate-postgresql.crt
            - name: config
              mountPath: /etc/rest-api.properties
              subPath: rest-api.properties
---
apiVersion: v1
kind: Service
metadata:
  name: smidle-restapi-service
spec:
  selector:
    app: smidle-restapi
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
