deployment/smidle-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smidle-service
spec:
  type: NodePort
  selector:
    app: smidle
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
